--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "easy-table": "~0.2.0",
     "clark": "0.0.6",
     "utf8": "~2.0.0",
-    "utf-8": "~0.1.0"
+    "utf-8": "~0.1.0",
+    "winston": "~0.7.2",
+    "should": "~2.1.1",
+    "chai-as-promised": "~4.1.0",
+    "chai": "~1.8.1",
+    "mocha-as-promised": "~1.4.1",
+    "assert": "~1.0.0"
   }
 }
